# irrlicht-newton-game1

./: .gitignore  CMakeLists.txt  README.md  WORKSPACE  irrlicht-newton-game1.files  irrlicht-newton-game1.includes  main.cpp
irrlicht-newton-game/: BUCK  BUILD  Info.plist  main.cpp  stdafx.h
irrlicht-newton-game/media/: BUCK
irrlicht-newton-game/media/models/: coliseum.3ds  coliseum.blend1  level.3ds
irrlicht-newton-game/media/scripts/: test1.lua
media/models/: coliseum.blend  ramp_floor.3ds  ramp_floor.blend  scene.blend
media/scripts/: test1.lua
source/: main.cpp
source/cppformat-master/: CMakeLists.txt
source/irrlicht-1.8.3/source/Irrlicht/: CAnimatedMeshHalfLife.d  CAnimatedMeshMD2.d  CAttributes.d  CB3DMeshFileLoader.d  CCSMLoader.d  CColladaMeshWriter.d  CDefaultGUIElementFactory.d  CDefaultSceneNodeAnimatorFactory.d  CDummyTransformationSceneNode.d  CEmptySceneNode.d  CFPSCounter.d  CGUICheckBox.d  CGUIColorSelectDialog.d  CGUIEditBox.d  CGUIEnvironment.d  CGUIFileOpenDialog.d  CGUIFont.d  CGUIImage.d  CGUIImageList.d  CGUIInOutFader.d  CGUIListBox.d  CGUIScrollBar.d  CGUISkin.d  CGUISpinBox.d  CGUITabControl.d  CGUITable.d  CGUITreeView.d  CGeometryCreator.d  CImageLoaderPPM.d  CImageLoaderPSD.d  CImageLoaderRGB.d  CImageLoaderTGA.d  CImageWriterBMP.d  CImageWriterJPG.d  CImageWriterPNG.d  CImageWriterPSD.d  CImageWriterTGA.d  CIrrMeshFileLoader.d  CIrrMeshWriter.d  CLMTSMeshFileLoader.d  (+50 more)
source/irrlicht-1.8.3/source/Irrlicht/MacOSX/MacOSX.xcodeproj/project.xcworkspace/xcuserdata/shybovycha.xcuserdatad/: UserInterfaceState.xcuserstate
source/irrlicht-1.8.3/source/Irrlicht/MacOSX/MacOSX.xcodeproj/xcuserdata/shybovycha.xcuserdatad/xcschemes/: 01.HelloWorld.xcscheme
source/irrlicht-1.8.3/source/Irrlicht/jpeglib/: jcdctmgr.d  jcinit.d  jcmainct.d  jcmaster.d  jcparam.d  jcprepct.d  jctrans.d  jdarith.d  jdcolor.d  jdmaster.d  jdpostct.d  jdtrans.d  jfdctfst.d  jfdctint.d  jidctfst.d  jidctint.d  jmemmgr.d  jquant1.d  jquant2.d  jutils.d
source/luacppinterface-master/: CMakeLists.txt
source/newton-dynamics-master/coreLibrary_300/source/core/: dgTypes.h
